--- a/monkey.html
+++ b/monkey.html
@@ -1,1 +1,13 @@
-test test type here for website test
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Website Name</title>
+</head>
+<body>
+  <img scr="https://media.discordapp.net/attachments/1066716569851396119/1066738368869826590/image.png"> </img>
+    
+</body>
+</html>
