--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Website Name</title>
+    <title>Discord Crazy</title>
 </head>
 <body>
   <img scr="https://media.discordapp.net/attachments/1066716569851396119/1066738368869826590/image.png"> </img>
