--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>Discord Crazy</title>
 </head>
 <body>
-  <img scr="https://media.discordapp.net/attachments/1066716569851396119/1066738368869826590/image.png"> </img>
+    <p> text belguga </p>
+    <img scr="https://media.discordapp.net/attachments/1066716569851396119/1066738368869826590/image.png"> </img>
     
 </body>
 </html>
