--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Discord Crazy</title>
+    <title>You read this ;0</title>
 </head>
 <body>
-    <p> text belguga </p>
+    <p> HAHAHAHAHA you read this didnt you... haha... if you read this send this link to 10 PEOPLE! or else.. you are gay...
+    
+    link: </p>
     <img scr="https://media.discordapp.net/attachments/1066716569851396119/1066738368869826590/image.png"> </img>
     
 </body>
