--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <p> HAHAHAHAHA you read this didnt you... haha... if you read this send this link to 10 PEOPLE! or else.. you are gay...
     
-    link: </p>
+    link: https://btos34.github.io/super-duper-umbrella/ </p>
     <img scr="https://media.discordapp.net/attachments/1066716569851396119/1066738368869826590/image.png"> </img>
     
 </body>
